ui fixes fixed families search branch removed otion to enlarge textfield added spacing for page header

--- a/client/src/components/ColorFill/ColorFill.css
+++ b/client/src/components/ColorFill/ColorFill.css
@@ -4,6 +4,7 @@
 .main-div {
   width: 90%;
   margin: auto;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
